Adds character level src
